@@ -1,6 +1,13 @@
 History file for ack.  https://beyondgrep.com/
 
 
+NEXT
+=====================================
+[ENHANCEMENTS]
+
+Added --ts for Typescript.
+
+
 2.999_03 Fri Jan 19 11:02:46 CST 2018
 =====================================
 [ENHANCEMENTS]
